sample_manifest (55).yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 'pc360-assia-svcs-prod'
  namespace: 'pc360'
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.allow-http: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "120"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "120"
    nginx.org/proxy-connect-timeout: 120s
  labels:
    project: 'pc360-assia-svcs'
    commit: 'a1b1065'
    role: java
    environment: prod
spec:
  rules:
    - host: pc360-assia-svcs-prod.kubeodc-prod.corp.intranet
      http:
        paths:
          - path: /
            backend:
              service:
                name: 'pc360-assia-svcs-prod'
                port:
                  number: 8080
  tls:
  - hosts:
    - 'pc360-assia-svcs-prod.kubeodc-prod.corp.intranet'
    secretName: managed-tls-secret
---
    
---
apiVersion: v1
kind: Service
metadata:
  name: 'pc360-assia-svcs-prod'
  namespace: 'pc360' 
  labels:
    project: 'pc360-assia-svcs'
    commit: 'a1b1065'
    role: java
    environment: prod
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    project: 'pc360-assia-svcs'
    commit: 'a1b1065'
    role: java
    environment: prod
  type: ClusterIP
---
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: 'pc360-assia-svcs-prod'
  labels:
    project: 'pc360-assia-svcs'
    commit: 'a1b1065'
    role: java
    environment: prod
spec:
  selector:
    matchLabels:
      project: 'pc360-assia-svcs'
      role: java
      environment: prod
  replicas: 10
  revisionHistoryLimit: 0
  template:
    metadata:
      labels:
        project: 'pc360-assia-svcs'
        commit: 'a1b1065'
        role: java
        environment: prod
    spec:
      containers:
        - name: java
          image: 'nexusprod.corp.intranet:4567/pc360/pc360-assia-svcs:release-v-22-08-02'
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            limits:
              memory: 1500Mi
      imagePullSecrets:
        - name: pc360-assia-svcs-release-v-22-08-02
---
---
